--- a/index.html
+++ b/index.html
@@ -8,11 +8,57 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-
     <div class="loader">
         <div></div>
         <div></div>
         <div></div>
+    </div>
+
+    <div class="container">
+        <header>
+            <a class="logo">
+                <img 
+                    src="./images/lego.png"
+                />
+            </a>
+            <nav class="navbar">
+                <a class="nav-item">Exclusivos</a>
+                <a class="nav-item">Nuevos</a>
+                <a class="nav-item">Giftcards</a>
+                <a class="nav-item">Find a Store</a>
+            </nav>
+        </header>
+        <section class="main-content">
+            <h5>Design your</h5>
+            <h4>Super Hero!</h4>
+            <p>
+                possimus voluptas ipsam excepturi libero necessitatibus veniam praesentium consectetur cumque eaque temporibus, id vel.
+            </p>
+        </section>
+        <section class="side-content">
+            <p>superman</p>
+            <img 
+                src="./images/super-man.png"
+            />
+            <div class="block"></div>
+        </section>
+        <footer>
+            <div class="hero-card">
+                <img
+                    src="./images/spiderman.png"
+                />
+            </div>
+            <div class="hero-card">
+                <img
+                    src="./images/robin.png"
+                />
+            </div>
+            <div class="hero-card">
+                <img
+                    src="./images/batman.webp"
+                />
+            </div>
+        </footer>
     </div>
     
     <script src="./js/main.js"></script>
