--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 />
             </a>
             <nav class="navbar">
-                <a class="nav-item">Exclusivos</a>
-                <a class="nav-item">Nuevos</a>
+                <a class="nav-item">Exclusives</a>
+                <a class="nav-item">News</a>
                 <a class="nav-item">Giftcards</a>
                 <a class="nav-item">Find a Store</a>
             </nav>
