🎨 Added some animations

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <section class="side-content">
             <p>superman</p>
             <img 
+                id="side-img"
                 src="./images/super-man.png"
             />
             <div class="block"></div>
